--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,11 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
