--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.jude:beam:2.6.10'
 }
