--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jude:beam:2.6.10'
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.4@aar') {
+        transitive = true
+    }
+    compile 'com.jude:utils:1.0.7'
 }
