--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "lives.allyn.com.lives"
+        applicationId "com.allyn.lives"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -22,6 +22,7 @@ android {
 
 
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -31,11 +32,20 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.pnikosis:materialish-progress:1.7'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jude:beam:2.6.10'
     compile 'com.jude:utils:1.0.7'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.liulishuo.filedownloader:library:0.2.6'
+    compile 'com.commit451:PhotoView:1.2.4'
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 }
