--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name=".app.MainApp"
         android:allowBackup="true"
-        android:icon="@mipmap/like"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
