--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'com.github.javiersantos:BottomDialogs:1.1'
 }
