--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.4@aar') {
         transitive = true
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile 'com.github.javiersantos:BottomDialogs:1.1'
+    compile files('libs/lite-orm-1.9.1.jar')
 }
