--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile 'com.github.javiersantos:BottomDialogs:1.1'
     compile files('libs/lite-orm-1.9.1.jar')
+    compile 'com.minimize.library:seekbar-compat:0.2.5'
 }
