--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile 'com.github.javiersantos:BottomDialogs:1.1'
     compile 'com.minimize.library:seekbar-compat:0.2.5'
+    compile 'me.yokeyword:indexablestickylistview:0.6.2'
 }
