--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         </activity>
         <activity android:name=".activity.books.BooksDetailsActivity" />
         <activity android:name=".activity.books.BooksClassifyDetailsActivity" />
-        <activity android:name=".activity.music.MusicPlayActivivy" />
+        <activity
+            android:name=".activity.music.MusicPlayActivivy"
+            android:launchMode="singleTask" />
 
         <service
             android:name=".service.MusicService"
