--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     compile 'com.github.javiersantos:BottomDialogs:1.1'
     compile 'com.minimize.library:seekbar-compat:0.2.5'
     compile 'me.yokeyword:indexablestickylistview:0.6.2'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+
 }
