--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.allyn.lives"
+        applicationId "com.fb.lives"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 2
