--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.fb.lives"
+        applicationId "com.szcx.caraide"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 2
